WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161230
The annotation-xml element does not need to be behave as an mrow
https://bugs.webkit.org/show_bug.cgi?id=161230
Summary
The annotation-xml element does not need to be behave as an mrow
Frédéric Wang (:fredw)
Reported
2016-08-26 01:16:07 PDT
In
bug 161050
, MathMLAnnotationElement was made a MathMLRowElement just because annotation-xml element currently generates RenderMathMLRow. This later point is actually not needed since annotation-xml is just a wrapper for foreign elements and so does not need to handle special features like operator spacing or stretching. We can thus move back MathMLAnnotationElement to a generic MathMLPresentationElement and instead make annotation-xml generate a generic RenderMathMLBlock element.
Attachments
Patch
(4.32 KB, patch)
2016-08-26 01:26 PDT
,
Frédéric Wang (:fredw)
rego
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(1.23 MB, application/zip)
2016-08-26 02:08 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-yosemite
(1.46 MB, application/zip)
2016-08-26 02:24 PDT
,
Build Bot
no flags
Details
Patch
(7.94 KB, patch)
2016-08-26 02:45 PDT
,
Frédéric Wang (:fredw)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(902.81 KB, application/zip)
2016-08-26 04:18 PDT
,
Build Bot
no flags
Details
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang (:fredw)
Comment 1
2016-08-26 01:26:30 PDT
Created
attachment 287079
[details]
Patch
Manuel Rego Casasnovas
Comment 2
2016-08-26 01:45:19 PDT
Comment on
attachment 287079
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=287079&action=review
r=me
> Source/WebCore/ChangeLog:3 > + The semantics-xml element does not need to be behave as an mrow
semantics-xml or annotation-xml as you said later? Nit: I'm not sure if it should be "as a mrow" or "as an mrow".
Frédéric Wang (:fredw)
Comment 3
2016-08-26 01:49:00 PDT
> > Source/WebCore/ChangeLog:3 > > + The semantics-xml element does not need to be behave as an mrow > > semantics-xml or annotation-xml as you said later?
Sorry, it's annotation-xml
> > Nit: I'm not sure if it should be "as a mrow" or "as an mrow".
The MathML spec says "an mrow"
Build Bot
Comment 4
2016-08-26 02:08:12 PDT
Comment on
attachment 287079
[details]
Patch
Attachment 287079
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1945515
New failing tests: accessibility/math-foreign-content.html
Build Bot
Comment 5
2016-08-26 02:08:15 PDT
Created
attachment 287083
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-08-26 02:24:29 PDT
Comment on
attachment 287079
[details]
Patch
Attachment 287079
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1945580
New failing tests: accessibility/math-foreign-content.html
Build Bot
Comment 7
2016-08-26 02:24:32 PDT
Created
attachment 287088
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Frédéric Wang (:fredw)
Comment 8
2016-08-26 02:35:18 PDT
(In reply to
comment #4
)
> Comment on
attachment 287079
[details]
> Patch > >
Attachment 287079
[details]
did not pass mac-wk2-ews (mac-wk2): > Output:
http://webkit-queues.webkit.org/results/1945515
> > New failing tests: > accessibility/math-foreign-content.html
So the failure of the accessibility test is because the AXMathRow is now removed from the accessibility tree: AXRole: AXGroup AXSubrole: AXDocumentMath AXValue: AXRole: AXGroup AXSubrole: AXMathRow AXValue: - AXRole: AXGroup AXSubrole: AXMathRow AXValue: - AXRole: AXGroup AXSubrole: AXValue: - AXRole: AXStaticText AXSubrole: AXValue: SVG + AXRole: AXGroup AXSubrole: AXValue: + AXRole: AXStaticText AXSubrole: AXValue: SVG AXRole: AXGroup AXSubrole: AXMathText AXValue: AXRole: AXStaticText AXSubrole: AXValue: HTML PASS successfullyParsed is true I think Joanie had concerns about annotation-xml generating useless AXMathRow when I added this test so I'll just update the test expectation.
Frédéric Wang (:fredw)
Comment 9
2016-08-26 02:45:23 PDT
Created
attachment 287090
[details]
Patch
Build Bot
Comment 10
2016-08-26 04:18:08 PDT
Comment on
attachment 287079
[details]
Patch
Attachment 287079
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1946202
New failing tests: accessibility/math-foreign-content.html imported/w3c/web-platform-tests/html/dom/interfaces.html
Build Bot
Comment 11
2016-08-26 04:18:12 PDT
Created
attachment 287099
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 12
2016-08-26 09:43:38 PDT
Comment on
attachment 287090
[details]
Patch Clearing flags on attachment: 287090 Committed
r205018
: <
http://trac.webkit.org/changeset/205018
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug