Source/WebCore/mathml/MathMLAnnotationElement.h
@@ -27,11 +27,11 @@
 
 #if ENABLE(MATHML)
 
-#include "MathMLRowElement.h"
+#include "MathMLPresentationElement.h"
 
 namespace WebCore {
 
-class MathMLAnnotationElement final : public MathMLRowElement {
+class MathMLAnnotationElement final : public MathMLPresentationElement {
 public:
     static Ref<MathMLAnnotationElement> create(const QualifiedName& tagName, Document&);
 private:
